--- a/src/assets/project-list.json
+++ b/src/assets/project-list.json
@@ -1,16 +1,4 @@
 [
-    {
-        "Project_ID": 1,
-        "ProjectName": "proj1",
-        "Priority": 4,
-        "Manager_ID": 2,
-        "Manager_Name": "john doe"
-    },
-    {
-        "Project_ID": 2,
-        "ProjectName": "proj2",
-        "Priority": 2,
-        "Manager_ID": 1,
-        "Manager_Name": "vijay varma"
-    }
+    {"Project_ID":1,"ProjectName":"JH","Priority":4,"Manager_ID":6,"NumberOfTask":3,"Manager_Name":"Sreejith","Status":"Active","Start_Date":"03/03/2017","End_Date":"12/12/2018"},
+    {"Project_ID":2,"ProjectName":"Manulife","Priority":5,"Manager_ID":4,"NumberOfTask":3,"Manager_Name":"Sabari","Status":"Active","Start_Date":"01/01/2017","End_Date":"01/12/2018"}
 ]
